# sideproj-learn-opengl

./: README.md
LearnOpenGL_Prototyping/: CMakeLists.txt
LearnOpenGL_Prototyping/src/: Application.cpp  Camera.cpp  Camera.h  Input.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  State.h  Texture.cpp  Texture.h
LearnOpenGL_Prototyping/src/Buffer/: IndexBuffer.cpp  IndexBuffer.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h
LearnOpenGL_Prototyping/src/tests/: Test.cpp  Test.h  Test3D.cpp  Test3D.h  TestClearColor.cpp  TestClearColor.h  TestTexture2D.cpp  TestTexture2D.h
OpenGLHelloWorld/: .gitignore  CMakeLists.txt  README.md
OpenGLHelloWorld/libs/glad/src/: glad.c
OpenGLHelloWorld/src/: main.cpp
OpenGLHelloWorld/src/Engine/: Engine.h  Window.cpp
OpenGLHelloWorld/src/Utility/: resourcemanager.h  shader.cpp  shader.h
libs/glad/include/glad/: glad.h
src/Engine/: Engine.cpp  Window.h
src/OpenGLearn/: Application.cpp
src/Utility/: Camera.h  resourcemanager.cpp  texture.cpp  texture.h
